# crypto_trader_clean

./: .gitignore  .pre-commit-config.yaml  Claude SOnnet 3.7 Chat for Auth Fix.md  GETTING_STARTED.md  OLD_START_NEW_THREAD.md  OLD_next_thread_instructions.md  OLD_next_thread_prompt.md  README.md  THREAD_START_GUIDE.md  cline_mcp_settings.json  conftest.py  debug_logging_issue.py  pyproject.toml  requirements.txt  run_em_test.py  run_trader.py  start_trading.bat
Automated AI Task Management Guidance System/docs/: work_tracking.md
coinbase_advanced_trade/: __init__.py  rest.py
config/: config.json  config_schema.json
docs/: ai_assistance_guide.md  ai_task_guide.md  common_issues.md  getting_started.md  project_structure.md  quality_control_process.md  verification_guide.md  work_tracking.md
docs/tasks/: README.md  WORKITEM-001.md  (+4 more)
examples/: basic_trading.py  paper_trading.py
scripts/: cleanup_pycache.py  coinbase_auth_troubleshooter.py  direct_verify.py  finish_task.py  fix_directory_conflict.py  fix_imports.py  fix_module_structure.py  nuclear_fix.py  process_assistant.py  setup_dev.bat  setup_dev.py  setup_dev.sh  setup_project_structure.py  start_task.py  test_auth_alternative.py  test_auth_crypto.py  test_auth_docs.py  test_auth_simple.py  test_auth_streaming.py  test_authentication.py  test_imports.py  test_public_endpoint.py  test_thread_012.py  thread_manager.py  update_imports.py  verify_implementation.py  verify_paper_trading.py  verify_thread.py  verify_workspace.py
src/: __init__.py
tests/: conftest.py
thread_management/: README.md
(+69 files in other folders)
